# django-rest-auth

./: .gitignore  pyproject.toml  setup.cfg
accounts/: models.py  serializers.py  urls.py  views.py
config/: settings.py  urls.py
